# Blindl

./: .gitignore  README.md
App/backend/: Dockerfile  docker-compose.yml  pyproject.toml
App/backend/migrations/: env.py
App/backend/migrations/versions/: 13835eb1e88a_initial_postgres_schema.py  3e6c97507604_fix_user_profile_tables_and_add_a_test.py  4506780afc0a_create_user_table.py  4eb83f46a94e_update_table_conversation.py  a98fab32c00d_create_other_tables.py  c6ab282c4594_update_tables_and_add_a_test.py
App/backend/src/crud/: base.py  conversation.py  match.py  message.py  profile.py  user.py  user_settings.py
App/backend/src/db/: session.py
App/backend/src/db/models/: __init__.py  conversation.py  match.py  message.py  profile.py  user.py
App/backend/src/models/api/: error_schema.py  response_schema.py
App/backend/src/models/common/: __init__.py  pagination_schema.py  timestamp_schema.py  uuid_schema.py
App/backend/src/models/conversation/: conversation_schema.py  message_schema.py
App/backend/src/models/matching/: active_match_schema.py  match_decision_schema.py  match_schema.py  past_match_schema.py  weekly_pool_schema.py
App/backend/src/models/profile/: profile_preferences_schema.py  profile_schema.py
App/backend/src/models/user/: user_schema.py  user_settings_schema.py
App/backend/tests/: conftest.py
App/backend/tests/crud/: test_crud_conversation.py  test_crud_match.py  test_crud_match_user.py  test_crud_messages.py
App/backend/tests/db/: test_db_connection.py  test_models.py  test_models_conversation.py  test_models_user.py
(+63 files in other folders)
