[project]
name = "blindl-backend"
version = "0.1.0"
description = "Backend API for Blindl dating application"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "pydantic[email]>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "black",
    "mypy",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

